# OCA

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  THIRD_PARTY_NOTICES.md  can_analyzer_gui.py  can_analyzer_serial.py  config.example.json  executar_can_analyzer_gui.bat  executar_can_analyzer_serial.bat  pyproject.toml  requirements-dbc.txt  requirements-dev.txt  run_can_analyzer_gui.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING.md  DBC.md  PROFILES.md  PROTOCOL.md  SAFETY.md  WINDOWS_DRIVER.md
examples/: demo.dbc  demo_capture.csv
firmware/CAN_Analyzer_XMC4700_Relax/: .cproject  .gitignore  .project  Lib_CAN_Analyzer.c  Lib_CAN_Analyzer.h  Lib_USB_Command.c  Lib_USB_Command.h  README.md  main.c
firmware/CAN_Analyzer_XMC4700_Relax/Dave/: .dconfig
firmware/CAN_Analyzer_XMC4700_Relax/Dave/Model/: ModelConfigData.data  ProjDiagram.dep  hw_ProjDiagram.dep  projectData.bak
firmware/CAN_Analyzer_XMC4700_Relax/Dave/Model/HW_RESOURCES/DEVICEPACKAGE/: DEVICEPACKAGE_0.dd
firmware/CAN_Analyzer_XMC4700_Relax/Dave/Model/HW_RESOURCES/SCU/: SCU_0.dd
locales/: en.json  pt_BR.json
oca/: __init__.py  capture.py  config.py  dbc.py  i18n.py  profiles.py  protocol.py  serial_ports.py
profiles/: demo_basic.json  generic.json
tests/: test_capture.py  test_config.py  test_dbc.py  test_i18n.py  test_profiles.py  test_protocol.py
tools/: build_desktop.sh  build_package.py  build_windows.ps1  make_source_archive.py  validate_project.py
(+11 files in other folders)
